--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="left">
+        <img src="./assets/jakob-rosen-KCXM1vtXvJs-unsplash.jpg" alt="road in the middle of a snowy forest">
+        <div class="title">
+            <img src="./assets/odin-lined.png" alt="The Odin Project's logo">
+            <p>ODIN</p>
+        </div>
+    </div>
+    <div class="atribution">
+        Photo by
+        <a href="https://unsplash.com/@jakobnoahrosen?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jacob Rosen</a>
+        on
+        <a href="https://unsplash.com/photos/black-asphalt-road-between-trees-covered-with-snow-during-daytime-KCXM1vtXvJs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </div>
+    <div class="right">
+        <p>This is not a real online service! ou know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+        <p>You know you want to.</p>
+        <form action="#" method="get">
+            Let's do this!
+            <div class="input-container">
+                <div class="input">
+                    <label for="first_name">FIRST NAME</label>
+                    <input type="text" id="first_name">
+                </div>
+                <div class="input">
+                    <label for="last_name">LAST NAME</label>
+                    <input type="text" id="last_name">
+                </div>
+                <div class="input">
+                    <label for="email">EMAIL</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="input">
+                    <label for="phone_number">PHONE NUMBER</label>
+                    <input type="tel" id="phone_number">
+                </div>
+                <div class="input">
+                    <label for="password">PASSWORD</label>
+                    <input type="password" id="password">
+                </div>
+                <div class="input">
+                    <label for="confirm_password">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirm_password">
+                </div>
+            </div>
+            <button>Create Account</button>
+            <div class="log-in">
+                Already have an account? 
+                <a href="#">Log in</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
