add: left panel style

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 <body>
     <div class="left">
-        <img src="./assets/jakob-rosen-KCXM1vtXvJs-unsplash.jpg" alt="road in the middle of a snowy forest">
+        <img class="background-image" src="./assets/jakob-rosen-KCXM1vtXvJs-unsplash.jpg" alt="road in the middle of a snowy forest">
         <div class="title">
             <img src="./assets/odin-lined.png" alt="The Odin Project's logo">
             <p>ODIN</p>
         </div>
+        <div class="atribution">
+            Photo by
+            <a href="https://unsplash.com/@jakobnoahrosen?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noreferrer">Jacob Rosen</a>
+            on
+            <a href="https://unsplash.com/photos/black-asphalt-road-between-trees-covered-with-snow-during-daytime-KCXM1vtXvJs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noreferrer">Unsplash</a>
+        </div>
     </div>
-    <div class="atribution">
-        Photo by
-        <a href="https://unsplash.com/@jakobnoahrosen?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jacob Rosen</a>
-        on
-        <a href="https://unsplash.com/photos/black-asphalt-road-between-trees-covered-with-snow-during-daytime-KCXM1vtXvJs?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-    </div>
+    
     <div class="right">
         <p>This is not a real online service! ou know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
         <p>You know you want to.</p>
