--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <div class="right">
         <div class="wrapper">
-            <p>This is not a real online service! ou know you need something like this in your life to help you realize your deepest dreams.</p>
+            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
             <p>Sign up now to get started.</p>
             <p>You <em>know</em> you want to.</p>
             <form action="#" method="get">
@@ -32,27 +32,27 @@
                     <div class="input-container">
                         <div class="input">
                             <label for="first_name">FIRST NAME</label>
-                            <input type="text" autocomplete="off" id="first_name">
+                            <input type="text" autocomplete="off" id="first_name" required>
                         </div>
                         <div class="input">
                             <label for="email">EMAIL</label>
-                            <input type="email" autocomplete="off" id="email">
+                            <input type="email" autocomplete="off" id="email" required>
                         </div>
                         <div class="input">
                             <label for="password">PASSWORD</label>
-                            <input type="password" autocomplete="off" id="password">
+                            <input type="password" autocomplete="off" id="password" required minlength="6">
                         </div>
                         <div class="input">
                             <label for="last_name">LAST NAME</label>
-                            <input type="text" autocomplete="off" id="last_name">
+                            <input type="text" autocomplete="off" id="last_name" required>
                         </div>
                         <div class="input">
                             <label for="phone_number">PHONE NUMBER</label>
-                            <input type="tel" autocomplete="off" id="phone_number">
+                            <input type="tel" autocomplete="off" id="phone_number" required>
                         </div>
                         <div class="input">
                             <label for="confirm_password">CONFIRM PASSWORD</label>
-                            <input type="password" autocomplete="off" id="confirm_password">
+                            <input type="password" autocomplete="off" id="confirm_password" required minlength="6">
                         </div>
                     </div>
                 </div>
